# pyqualw2

./: .gitignore  .pre-commit-config.yaml  README.md  pixi.toml  pyproject.toml
.github/workflows/: lint.yml  tests.yml
pyqualw2/: OLD_run_sim.py  config.py  data.py  model_run.py  model_runner.py  post_run.py  pre_run.py  preprocess.py
pyqualw2/cli/: __init__.py  preprocess.py
pyqualw2/config/: config.py  inputs.py  options.py  subconfig.py
pyqualw2/model_runner/: model_runner.py
src/: preprocess.py
test/: conftest.py  test_config.py  test_inputs.py  test_model_runner.py
test/sample_data/: mbth_wb1.csv  mvpr1.npt  w2_con.csv
