[project]
name = "pyqualw2"
description = "A CE-QUAL-W2 orchestration toolkit"
readme = "README.md"
requires-python = ">=3.13"
version = "0.0.1"

dependencies = [
    "typer>=0.20"
]

[workspace]
authors = ["bobo-baggins <urbanecoguard@gmail.com>"]
channels = ["conda-forge"]
name = "pyqualw2"
platforms = ["linux-64"]
version = "0.1.0"


[tool.pixi.workspace]
name = "pyqualw2"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pyqualw2 = { path = ".", editable = true }

[tool.pixi.tasks]
